--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://larsjung.de/kjua/latest/kjua-0.9.0.min.js"></script>
+    <script src="script/kjua-0.9.0.min.js"></script>
     <title>QR</title>
 
 
